--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Backend for a simple toy chat app",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "serve": "nodemon server/server.js",
+    "build-client": "cd client; npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "koa": "^2.5.1",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.3",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "nodemon": "^1.17.5"
   }
 }
