--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.10",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-cli": "^2.9.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
