--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "koa-static": "^4.0.3",
     "lodash": "^4.17.10",
     "nodemon": "^1.17.5",
-    "npm": "^6.1.0"
+    "npm": "^6.1.0",
+    "socket.io": "^2.1.1"
   }
 }
