--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "vue": "^2.5.16",
-    "vue-cli": "^2.9.6"
+    "vue-cli": "^2.9.6",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
