--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.10",
     "nodemon": "^1.17.5",
     "npm": "^6.1.0",
-    "socket.io": "^2.1.1"
+    "socket.io": "^2.1.1",
+    "uws": "^10.148.0"
   }
 }
