--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "postinstall": " cd client && npm install",
     "build-client": "cd client && npm run build",
-    "setup": "npm run install; npm run build-client",
+    "setup": "npm install; npm run build-client",
     "serve": "nodemon server/server.js"
   },
   "author": "",
