Axios global in vue and apollo-server-koa to integrate apollo and koa

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.0.0",
+    "apollo-server-koa": "^2.0.0-rc.12",
     "graphql": "^0.13.2",
     "koa": "^2.5.1",
     "koa-router": "^7.4.0",
