--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^1.17.5",
     "npm": "^6.1.0",
     "socket.io": "^2.1.1",
+    "sqlite3": "^4.0.2",
     "uws": "^10.148.0"
   }
 }
