--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "graphql-subscriptions": "^0.5.8",
     "lodash": "^4.17.10",
     "socket.io-client": "^2.1.1",
+    "subscriptions-transport-ws": "^0.9.13",
     "vue": "^2.5.16",
     "vue-cli": "^2.9.6",
     "vue-router": "^3.0.1"
