--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "apollo-server": "^2.0.0",
     "apollo-server-koa": "^2.0.0-rc.12",
     "graphql": "^0.13.2",
+    "graphql-server-express": "^1.4.0",
     "koa": "^2.5.1",
     "koa-router": "^7.4.0",
     "koa-static": "^4.0.3",
     "lodash": "^4.17.10",
     "nodemon": "^1.17.5",
-    "npm": "^6.1.0",
+    "npm": "^6.2.0",
     "socket.io": "^2.1.1",
     "sqlite3": "^4.0.2",
+    "subscriptions-transport-ws": "^0.9.14",
     "uws": "^10.148.0"
   }
 }
