--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.5.16",
     "vue-cli": "^2.9.6",
     "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "ws": "^6.0.0"
   },
   "devDependencies": {
